adding example rekognition lambda

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,13 +14,11 @@ phases:
     build:
         commands:
             - echo Starting the build phase on `date`
-            - zip -r lambda_function_1.zip src/lambda_function_1.py src/s3.py src/sts.py src/util.py
-            - zip -r lambda_function_2.zip src/lambda_function_2.py src/s3.py src/sts.py src/util.py
+            - zip -r assignment2.zip src/*.py
     post_build:
         commands:
             - echo Build completed on `date`
 artifacts:
     files:
-        - lambda_function_1.zip
-        - lambda_function_2.zip
+        - assignment2.zip
     name: assignment2-build
