--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,8 +14,8 @@ phases:
         commands:
             - echo Starting the build phase on `date`
             - zip -r hw2_dd2676_lambda_functions.zip src/*.py
-            - zip -r hw2_dd2676_lambda_function1.zip src/lambda_function_1.py s3.py util.py
-            - zip -r hw2_dd2676_lambda_function2.zip src/lambda_function_2.py s3.py util.py
+            - zip -r hw2_dd2676_lambda_function1.zip src/lambda_function_1.py src/s3.py src/util.py
+            - zip -r hw2_dd2676_lambda_function2.zip src/lambda_function_2.py src/s3.py src/util.py
     post_build:
         commands:
             - echo Build completed on `date`
