adding additional lambda function

--- a/cfg/c-create_lambda_functions.yml
+++ b/cfg/c-create_lambda_functions.yml
@@ -54,8 +54,7 @@ Resources:
           Version: '2012-10-17'
           Statement:
           - Effect: Allow
-            Action:
-            - logs:*
+            Action: logs:*
             Resource: arn:aws:logs:*:*:*
 
   HW2LambdaFunction1:
