--- a/cfg/d-create_api_gateway.yml
+++ b/cfg/d-create_api_gateway.yml
@@ -7,71 +7,111 @@ Resources:
     Type: AWS::ApiGateway::RestApi
     Properties:
       Description: An api gateway with S3 service and lambda integrations
+      Name: hw2-api-gateway
       ApiKeySourceType: HEADER
       EndpointConfiguration:
         Types:
-          - EDGE
-      Name: lambda-api
+        - REGIONAL
       Tags:
         - Key: project
           Value: hw2
         - Key: student
           Value: dd2676
 
-    HW2RestAPIResource:
-      Type: AWS::ApiGateway::Resource
-      Properties:
-        ParentId: !GetAtt HW2RestAPI.RootResourceId
-        PathPart: 'search'
-        RestApiId: !Ref HW2RestAPI
-        Tags:
-          - Key: project
-            Value: hw2
-          - Key: student
-            Value: dd2676
+  HW2RestAPISearchResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId: !GetAtt HW2RestAPI.RootResourceId
+      PathPart: 'search'
+      RestApiId: !Ref HW2RestAPI
 
-    HW2RestAPIMethod:
-      Type: AWS::ApiGateway::Method
-      Properties:
-        ApiKeyRequired: false
-        AuthorizationType: NONE
-        HttpMethod: POST
-        Integration:
-          ConnectionType: INTERNET
-          Credentials: !GetAtt ApiGatewayIamRole.Arn
-          IntegrationHttpMethod: POST
-          PassthroughBehavior: WHEN_NO_MATCH
-          TimeoutInMillis: 29000
-          Type: AWS_PROXY
-          Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunction.Arn}/invocations'
-        OperationName: 'lambda'
-        ResourceId: !Ref HW2RestAPIResource
-        RestApiId: !Ref HW2RestAPI
-        Tags:
-          - Key: project
-            Value: hw2
-          - Key: student
-            Value: dd2676
+  HW2RestAPISearchMethodGET:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      ApiKeyRequired: false
+      AuthorizationType: NONE
+      HttpMethod: GET
+      Integration:
+        ConnectionType: INTERNET
+        Credentials: !GetAtt HW2RestAPIIamRole.Arn
+        IntegrationHttpMethod: GET
+        PassthroughBehavior: WHEN_NO_MATCH
+        TimeoutInMillis: 29000
+        Type: AWS_PROXY
+        #Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunction.Arn}/invocations'
+        Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:677126791323:function:hw2_lambda_function3/invocations'
+      OperationName: 'lambda'
+      ResourceId: !Ref HW2RestAPISearchResource
+      RestApiId: !Ref HW2RestAPI
 
-    HW2RestAPIModel:
-      Type: AWS::ApiGateway::Model
-      Properties:
-        ContentType: 'application/json'
-        RestApiId: !Ref HW2RestAPI
-        Schema: {}
+  HW2RestAPIUploadResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId: !GetAtt HW2RestAPI.RootResourceId
+      PathPart: 'upload'
+      RestApiId: !Ref HW2RestAPI
 
-    HW2RestAPIStage:
-      Type: AWS::ApiGateway::Stage
-      Properties:
-        DeploymentId: !Ref HW2RestAPIDeployment
-        Description: Lambda API Stage v0
-        RestApiId: !Ref HW2RestAPI
-        StageName: 'v0'
+  HW2RestAPIUploadMethodPOST:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      ApiKeyRequired: false
+      AuthorizationType: NONE
+      HttpMethod: POST
+      Integration:
+        ConnectionType: INTERNET
+        Credentials: !GetAtt HW2RestAPIIamRole.Arn
+        IntegrationHttpMethod: POST
+        PassthroughBehavior: WHEN_NO_MATCH
+        TimeoutInMillis: 29000
+        Type: AWS_PROXY
+        #Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaFunction.Arn}/invocations'
+        Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:677126791323:function:hw2_lambda_function2/invocations'
+      OperationName: 'lambda'
+      ResourceId: !Ref HW2RestAPIUploadResource
+      RestApiId: !Ref HW2RestAPI
 
-    HW2RestAPIDeployment:
-      Type: AWS::ApiGateway::Deployment
-      DependsOn: HW2RestAPIMethod
-      Properties:
-        Description: Lambda API Deployment
-        RestApiId: !Ref HW2RestAPI
 
+  HW2RestAPIModel:
+    Type: AWS::ApiGateway::Model
+    Properties:
+      ContentType: 'application/json'
+      RestApiId: !Ref HW2RestAPI
+      Schema: {}
+
+  HW2RestAPIStage:
+    Type: AWS::ApiGateway::Stage
+    Properties:
+      DeploymentId: !Ref HW2RestAPIDeployment
+      Description: Lambda API Stage v0
+      RestApiId: !Ref HW2RestAPI
+      StageName: 'v0'
+
+  HW2RestAPIDeployment:
+    Type: AWS::ApiGateway::Deployment
+    DependsOn: HW2RestAPISearchMethodGET
+    Properties:
+      Description: Lambda API Deployment
+      RestApiId: !Ref HW2RestAPI
+
+  HW2RestAPIIamRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Sid: ''
+            Effect: 'Allow'
+            Principal:
+              Service:
+                - 'apigateway.amazonaws.com'
+            Action:
+              - 'sts:AssumeRole'
+      Path: '/'
+      Policies:
+      - PolicyName: LambdaAccess
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action: lambda:*
+            Resource: arn:aws:lambda:*:*:*
