--- a/cft/b-create_lambda_functions.yml
+++ b/cft/b-create_lambda_functions.yml
@@ -37,6 +37,7 @@ Resources:
     # Source: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-tags
     Type: AWS::IAM::Role
     Properties:
+      RoleName: hw2-dd2676-lambda-function-execution-role
       Description: Describe this IAM role here
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -62,7 +63,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Description: Describe your lambda function here
-      FunctionName: hw2_lambda_function1
+      FunctionName: hw2_lambda1
       Runtime: python3.8
       Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
       Code:
@@ -82,7 +83,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Description: Describe your lambda function here
-      FunctionName: hw2_lambda_function2
+      FunctionName: hw2_lambda2
       Runtime: python3.8
       Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
       Code:
@@ -102,7 +103,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Description: Describe your lambda function here
-      FunctionName: hw2_lambda_function3
+      FunctionName: hw2_lambda3
       Runtime: python3.8
       Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
       Code:
