--- a/cft/b-hw2-1323-lambda-functions.yml
+++ b/cft/b-hw2-1323-lambda-functions.yml
@@ -7,7 +7,7 @@ Resources:
     Type: AWS::S3::Bucket
     DependsOn: HW2LambdaFunction1Permission
     Properties:
-      BucketName: hw2-dd2676-photos
+      BucketName: hw2-1323-photos
       NotificationConfiguration:
         LambdaConfigurations:
           - Event: s3:ObjectCreated:*
@@ -20,8 +20,8 @@ Resources:
       Tags:
         - Key: project
           Value: hw2
-        - Key: student
-          Value: dd2676
+        - Key: account
+          Value: 1323
 
   HW2LambdaFunction1Permission:
     # Source: https://www.itonaut.com/2018/10/03/implement-s3-bucket-lambda-triggers-in-aws-cloudformation/
@@ -30,14 +30,14 @@ Resources:
       Action: 'lambda:InvokeFunction'
       FunctionName: !Ref HW2LambdaFunction1
       Principal: s3.amazonaws.com
-      SourceArn: !Sub 'arn:aws:s3:::hw2-dd2676-photos'
+      SourceArn: !Sub 'arn:aws:s3:::hw2-1323-photos'
       SourceAccount: !Ref AWS::AccountId
 
   HW2LambdaFunctionExecutionRole:
     # Source: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-tags
     Type: AWS::IAM::Role
     Properties:
-      RoleName: hw2-dd2676-lambda-function-execution-role
+      RoleName: hw2-1323-lambda-function-execution-role
       Description: Describe this IAM role here
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -65,18 +65,19 @@ Resources:
       Description: Describe your lambda function here
       FunctionName: hw2_lambda1
       Runtime: python3.8
-      Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
+      Role: Ref! HW2LambdaFunctionExecutionRole
+      #Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
       Code:
-        S3Bucket: hw2-dd2676-repo
-        S3Key: hw2-dd2676_lambda-build/hw2_dd2676_lambda1.zip
+        S3Bucket: hw2-1323-repo
+        S3Key: hw2-1323_lambda-build/hw2_1323_lambda1.zip
       Handler: hw2_lambda1.lambda_handler
       MemorySize: 256
       Timeout: 10
       Tags:
         - Key: project
           Value: hw2
-        - Key: student
-          Value: dd2676
+        - Key: account
+          Value: 1323
 
   HW2LambdaFunction2:
     # Source: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html
@@ -85,18 +86,19 @@ Resources:
       Description: Describe your lambda function here
       FunctionName: hw2_lambda2
       Runtime: python3.8
-      Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
+      Role: Ref! HW2LambdaFunctionExecutionRole
+      #Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
       Code:
-        S3Bucket: hw2-dd2676-repo
-        S3Key: hw2-dd2676_lambda-build/hw2_dd2676_lambda2.zip
+        S3Bucket: hw2-1323-repo
+        S3Key: hw2-1323_lambda-build/hw2_1323_lambda2.zip
       Handler: hw2_lambda2.lambda_handler
       MemorySize: 256
       Timeout: 10
       Tags:
         - Key: project
           Value: hw2
-        - Key: student
-          Value: dd2676
+        - Key: account
+          Value: 1323
 
   HW2LambdaFunction3:
     # Source: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html
@@ -105,22 +107,23 @@ Resources:
       Description: Describe your lambda function here
       FunctionName: hw2_lambda3
       Runtime: python3.8
-      Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
+      Role: Ref! HW2LambdaFunctionExecutionRole
+      #Role: arn:aws:iam::677126791323:role/viens-lambda-service-role
       Code:
-        S3Bucket: hw2-dd2676-repo
-        S3Key: hw2-dd2676_lambda-build/hw2_dd2676_lambda3.zip
+        S3Bucket: hw2-1323-repo
+        S3Key: hw2-1323_lambda-build/hw2_1323_lambda3.zip
       Handler: hw2_lambda3.lambda_handler
       MemorySize: 256
       Timeout: 10
       Tags:
         - Key: project
           Value: hw2
-        - Key: student
-          Value: dd2676
+        - Key: account
+          Value: 1323
 
 Outputs:
   HW2PhotosBucketARN:
-    Description: 'The ARN for the hw2-dd2676-photos bucket'
+    Description: 'The ARN for the hw2-1323-photos bucket'
     Value: !GetAtt HW2PhotosBucket.Arn
   HW2LambdaFunctionExecutionRoleARN:
     Description: 'The ARN for the lambda function execution role'
