--- a/cft/c-hw2-1323-api-gateway.yml
+++ b/cft/c-hw2-1323-api-gateway.yml
@@ -32,7 +32,27 @@ Resources:
       ApiKeyRequired: false
       AuthorizationType: NONE
       HttpMethod: GET
+      ResourceId: !Ref HW2RestAPISearchResource
       RestApiId: !Ref HW2RestAPI
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !Join
+              - ''
+              - - 'arn:aws:lambda:'
+                - !Ref AWS::Region
+                - ':'
+                - !Ref AWS::AccountId
+                - ':function:hw2_lambda2'
+        Credentials: !GetAtt HW2RestAPIIamRole.Arn
+        IntegrationResponses:
+          - SelectionPattern: ''
+            StatusCode: 200
+      MethodResponses:
+        - StatusCode: 200
+
 
   HW2RestAPIPhotosResource:
     Type: AWS::ApiGateway::Resource
@@ -61,6 +81,8 @@ Resources:
       ApiKeyRequired: false
       AuthorizationType: NONE
       HttpMethod: PUT
+      ResourceId: !Ref HW2RestAPIObjectResource
+      RestApiId: !Ref HW2RestAPI
       RequestParameters:
         method.request.path.folder: true
         method.request.path.object: true
@@ -70,7 +92,7 @@ Resources:
         RequestParameters:
           integration.request.path.bucket: method.request.path.folder
           integration.request.path.key: method.request.path.object
-        Uri: !Sub 'arn:aws:apigateway:us-east-1:s3:path/{bucket}/{key}'
+        Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:s3:path/{bucket}/{key}'
         ConnectionType: INTERNET
         Credentials: !GetAtt HW2RestAPIIamRole.Arn
         PassthroughBehavior: WHEN_NO_MATCH
@@ -89,8 +111,7 @@ Resources:
         - StatusCode: 200
         - StatusCode: 400
         - StatusCode: 500
-      ResourceId: !Ref HW2RestAPIObjectResource
-      RestApiId: !Ref HW2RestAPI
+
 
   HW2RestAPIStage:
     Type: AWS::ApiGateway::Stage
@@ -136,6 +157,7 @@ Resources:
       Path: '/'
       ManagedPolicyArns:
           - arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs
+          #- arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Policies:
         - PolicyName: hw2-1323-api-gateway-s3-policy
           PolicyDocument:
@@ -149,3 +171,17 @@ Resources:
           Value: hw2
         - Key: account
           Value: 1323
+
+  HW2RestAPIIamPolicy:
+    Type: 'AWS::IAM::Policy'
+    DependsOn: HW2RestAPIIamRole
+    Properties:
+      PolicyName: hw2-1323-api-gateway_lambda_policy
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: 'Allow'
+            Action: 'lambda:InvokeFunction'
+            Resource: '*'
+      Roles:
+        - Ref: HW2RestAPIIamRole
